<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_margin="1dp"
    card_view:cardCornerRadius="5dp"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="50dp"
        android:background="@color/abc_search_url_text_normal"
        android:elevation="15dp"
        android:padding="2dp">

        <TextView
            android:layout_gravity="center"
            android:id="@+id/ipLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/deviceName"
            android:text="@string/ipLabel"
            android:textColor="@color/abc_primary_text_material_light"
            android:textSize="14sp" />


        <TextView
            android:id="@+id/deviceName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_gravity="center"
            android:layout_marginTop="6dp"
            android:paddingTop="5dp"
            android:paddingBottom="10dp"
            android:text="@string/deviceName"
            android:textColor="#FFFFFF"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/macAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/macLabel"
            android:layout_gravity="center"
            android:layout_marginLeft="103dp"
            android:layout_marginBottom="18dp"
            android:layout_toRightOf="@+id/macLabel"
            android:text="@string/macHolder"
            android:textColor="#FFFFFF"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/macLabel"
            android:text="@string/mac_label"
            android:paddingTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_below="@+id/ipLabel"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/abc_primary_text_material_light"/>

        <TextView
            android:id="@+id/deviceIp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/deviceIp"
            android:layout_alignBottom="@+id/ipLabel"
            android:layout_gravity="center"
            android:layout_marginLeft="274dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="17dp"
            android:layout_toRightOf="@+id/ipLabel"
            android:text="@string/ipPlaceholder"
            android:textColor="#FFFFFF"
            android:textSize="14sp" />


    </RelativeLayout>




</android.support.v7.widget.CardView>
